# hypermodern-python

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
src/hypermodern_python/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
