[tool.coverage.paths]
source = ['src', '*/site-packages']

[tool.coverage.run]
branch = true
source = ['hypermodern_python']

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python Project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jasonwashburn/hypermodern-python"
repository = "https://github.com/jasonwashburn/hypermodern-python"
keywords = ["hypermodern"]
authors = ["Jason Washburn <jason.washburn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
